code changes to better use java 17 features